# os_credits

./: .bandit  .coveragerc  .default.env  .editorconfig  .fake.env  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile.dev  Makefile  README.md  README.rst  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  tox.ini
config/: credits.toml.in
docs/: conf.py  development.rst  exceptions.rst  extending.rst  index.rst  influx.rst  logging.rst  metrics_and_measurements.rst  modules.rst  notifications.rst  os_credits.credits.rst  os_credits.influx.rst  os_credits.perun.rst  os_credits.rst  perun.rst  settings.rst  views.rst  workflow.rst
docs/_static/: custom.css
docs/development/: metrics_and_measurements.rst
os_credits/: __init__.py  __main__.py  cli.py  credits.py  exceptions.py  influxdb.py  log.py  main.py  settings.py  views.py
os_credits/credits/: base_models.py  formulas.py  measurements.py  tasks.py
os_credits/influx/: client.py  model.py
os_credits/perun/: attributes.py  attributesManager.py  groupsManager.py  requests.py  resourcesManager.py
os_project_usage_processor/: __init__.py  main.py  settings.py  views.py
os_project_usage_processor/perun/: attributesManager.py  exceptions.py  groupsManager.py  requests.py
src/os_credits/: __init__.py  __main__.py  cli.py  exceptions.py  log.py  main.py  notifications.py  prometheus_metrics.py  settings.py  views.py
src/os_credits/credits/: base_models.py  billing.py  models.py  tasks.py
src/os_credits/influx/: client.py  exceptions.py  helper.py  model.py  valueTypes.py
src/os_credits/perun/: __init__.py  attributes.py  attributesManager.py  base_attributes.py  exceptions.py  group.py  groupsManager.py  requests.py  resourcesManager.py
src/os_project_usage_processor/: main.py
tests/: conftest.py  docker-compose.yml  patches.py  test.env  test_application.py  test_attribute.py  test_calculations.py  test_credits_history.py  test_group.py  test_influx.py  test_influxdbpoint.py  test_measurements.py  test_notifications.py  test_perun.py  test_settings.py
(+4 files in other folders)
