[tool.poetry]
name = "os_credits"
version = "0.1.0"
description = ""
authors = ["gilbus"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
toml = "^0.10.0"
aioinflux = "^0.5.1"
pandas = "^0.24.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
aiohttp-devtools = "^0.11.0"
ipython = "^7.2"
mypy-mypyc = "^0.670.0"

[tool.poetry.scripts]
os-credits="os_credits.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
