[tool.poetry]
name = "os_credits"
version = "0.2.0"
description = ""
authors = ["gilbus"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
aioinflux = "^0.5.1"
pandas = "^0.24.0"
aiohttp-swagger = "^1.0"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "^0.11.0"
pytest = "^4.3"
bandit = "^1.5"
pytest-aiohttp = "^0.3.0"
pre-commit = "^1.14"
black = {version = "^19.3-alpha.0",allows-prereleases = true}
mypy = "^0.700.0"

[tool.poetry.scripts]
os-credits="os_credits.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
