[tool.poetry]
name = "os_credits"
version = "0.2.0"
description = ""
authors = ["gilbus"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
aioinflux = "^0.5.1"
aiohttp-swagger = "^1.0"
prometheus_async = {version = "^19.2",extras = ["aiohttp"]}
aiohttp_jinja2 = "^1.1"
aiosmtplib = "^1.0"
mypy_extensions = "^0.4.1"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "^0.11.0"
pytest = "^4.3"
pytest-aiohttp = "^0.3.0"
pre-commit = "^1.14"
black = {version = "^19.3-alpha.0",allows-prereleases = true}
mypy = "^0.701.0"
sphinx = "^2.0"
sphinx-autodoc-typehints = "^1.6"
pytest-localserver = "^0.5.0"
pytest-cov = "^2.6"
sphinxcontrib-trio = "^1.0"
lxml = "^4.3"
pytest-notifier = "^1.0"
pytest-docker-compose = "^1.0"

[tool.poetry.scripts]
os-credits="os_credits.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
